<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorApp"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/return_back"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textSize="14sp"
        android:background="@drawable/btn_border_white_selector" />



    <View
        android:id="@+id/line_left"
        android:background="@color/divider_color"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_head_line"
        app:layout_constraintTop_toTopOf="@id/tv_head_line"
        app:layout_constraintBottom_toBottomOf="@id/tv_head_line"
        />

    <TextView
        android:id="@+id/tv_head_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bills"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_back"
        app:layout_constraintLeft_toRightOf="@id/line_left"
        app:layout_constraintRight_toLeftOf="@id/line_right"
        android:layout_marginTop="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <View
        android:id="@+id/line_right"
        android:background="@color/divider_color"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toTopOf="@id/line_left"
        app:layout_constraintLeft_toRightOf="@id/tv_head_line"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_head_line"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:text="@string/money"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        />
    <EditText
        android:id="@+id/et_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_money"
        app:layout_constraintLeft_toRightOf="@id/tv_money"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/money_hint"
        android:digits="1234567890."
        android:textSize="14sp"
        android:background="@null"
        android:inputType="numberDecimal|number"
        android:maxLines="1"
        android:autofillHints="" />


    <View
        android:id="@+id/line_money"
        android:background="@color/divider_color"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_money"
        app:layout_constraintLeft_toLeftOf="@id/tv_money"
        app:layout_constraintRight_toRightOf="@id/et_money"
        android:layout_marginTop="10dp"
        />


    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line_money"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:text="@string/type"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        />

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line_money"
        app:layout_constraintLeft_toRightOf="@id/tv_type"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:id="@+id/sp_type"
        android:entries="@array/typeArr"
        />

    <View
        android:id="@+id/line_type"
        android:background="@color/divider_color"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_type"
        app:layout_constraintLeft_toLeftOf="@id/tv_type"
        app:layout_constraintRight_toRightOf="@id/sp_type"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:text="@string/note"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:id="@+id/et_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_note"
        app:layout_constraintLeft_toRightOf="@id/tv_money"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/note_hint"
        android:textSize="14sp"
        android:background="@null"
        android:maxLength="16"
        android:autofillHints=""
        android:inputType=""
        tools:ignore="TextFields" />

    <View
        android:background="@color/divider_color"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_note"
        app:layout_constraintLeft_toLeftOf="@id/tv_money"
        app:layout_constraintRight_toRightOf="@id/et_money"
        android:layout_marginTop="10dp"
        />


    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_note"
        app:layout_constraintBottom_toTopOf="@id/tv_confirm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rb_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/income" />

        <RadioButton
            android:id="@+id/rb_outcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outcome" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="0dp"
        android:layout_height="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/confirm"
        android:gravity="center"
        android:background="@drawable/btn_border_white_selector"
        />

</android.support.constraint.ConstraintLayout>
