<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="cn.edu.sicnu.account.auth.LoginActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        />
    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:text="@string/phone_number"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_phone_number"
        app:layout_constraintLeft_toRightOf="@id/tv_phone_number"
        app:layout_constraintRight_toLeftOf="@id/iv_clear"
        android:layout_marginStart="15dp"
        android:hint="@string/phone_number_hint"
        android:textSize="14sp"
        android:background="@null"
        android:textCursorDrawable="@drawable/cursor_et_common"
        android:inputType="phone|number"
        android:maxLines="1"
        android:maxLength="11"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/iv_clear"
        android:layout_width="25dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/tv_phone_number"
        app:layout_constraintBottom_toBottomOf="@id/tv_phone_number"
        app:layout_constraintLeft_toRightOf="@id/et_phone"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_phone"
        android:contentDescription="@string/app_name" />

    <View
        android:id="@+id/line_phone"
        android:background="@color/divider_color"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
        app:layout_constraintLeft_toLeftOf="@id/tv_phone_number"
        app:layout_constraintRight_toRightOf="@id/iv_clear"
        android:layout_marginTop="10dp"
       />

    <TextView
        android:id="@+id/tv_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:text="@string/psw"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_psw"
        app:layout_constraintLeft_toRightOf="@id/tv_phone_number"
        app:layout_constraintRight_toLeftOf="@id/iv_clear"
        android:layout_marginStart="15dp"
        android:hint="@string/psw_hint"
        android:textSize="14sp"
        android:background="@null"
        android:textCursorDrawable="@drawable/cursor_et_common"
        android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:maxLength="16"
        android:autofillHints=""
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/iv_isLook"
        android:layout_width="25dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/tv_psw"
        app:layout_constraintBottom_toBottomOf="@id/tv_psw"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_password"
        android:contentDescription="@string/app_name" />

    <View
        android:id="@+id/line_password"
        android:background="@color/divider_color"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_psw"
        app:layout_constraintLeft_toLeftOf="@id/tv_phone_number"
        app:layout_constraintRight_toRightOf="@id/iv_clear"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_password"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/login"
        android:gravity="center"
        android:background="@drawable/btn_border_common_selector"
        />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/register"
        android:gravity="center"
        />

    <View
        android:id="@+id/line_register"
        android:background="@color/divider_color"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        app:layout_constraintLeft_toLeftOf="@id/tv_register"
        app:layout_constraintRight_toRightOf="@id/tv_register"
        android:layout_marginTop="0dp"
        />

    <View
        android:id="@+id/line_left"
        android:background="@color/divider_color"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_other_login_method"
        app:layout_constraintTop_toTopOf="@id/tv_other_login_method"
        app:layout_constraintBottom_toBottomOf="@id/tv_other_login_method"
        />

    <TextView
        android:id="@+id/tv_other_login_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_login_method"
        app:layout_constraintBottom_toTopOf="@id/tv_wx_login"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toRightOf="@id/line_left"
        app:layout_constraintRight_toLeftOf="@id/line_right"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <View
        android:id="@+id/line_right"
        android:background="@color/divider_color"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toTopOf="@id/line_left"
        app:layout_constraintLeft_toRightOf="@id/tv_other_login_method"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tv_wx_login"
        android:layout_width="0dp"
        android:layout_height="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_qq_login"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/wx_login"
        android:gravity="center"
        android:background="@drawable/btn_border_common_selector"
        />

    <TextView
        android:id="@+id/tv_qq_login"
        android:layout_width="0dp"
        android:layout_height="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_host"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/qq_login"
        android:gravity="center"
        android:background="@drawable/btn_border_common_selector"
        />

    <TextView
        android:id="@+id/tv_host"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/host"
        android:gravity="center"
    />

    <View
        android:background="@color/divider_color"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_host"
        app:layout_constraintLeft_toLeftOf="@id/tv_host"
        app:layout_constraintRight_toRightOf="@id/tv_host"
        android:layout_marginTop="0dp"
        />


</android.support.constraint.ConstraintLayout>
