<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="cn.edu.sicnu.account.fragment.AccountDetailFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorApp"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_data"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />
<!--8-->

        <View
            android:id="@+id/line"
            android:layout_width="0.5dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:background="@color/divider_color"
            app:layout_constraintBottom_toBottomOf="@id/tv_data"
            app:layout_constraintLeft_toRightOf="@id/tv_data"
            app:layout_constraintStart_toEndOf="@+id/tv_data"
            app:layout_constraintTop_toTopOf="@id/tv_data" />

        <TextView
            android:id="@+id/tv_income"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/line"
            app:layout_constraintStart_toEndOf="@+id/line"
            app:layout_constraintTop_toTopOf="@+id/tv_data" />

        <TextView
            android:id="@+id/tv_outcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="0dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/tv_income"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_income"
            app:layout_constraintTop_toTopOf="@+id/tv_income" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="44">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/income_or_outcome" />
<!--            10-->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="9"
            android:text="@string/money" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="5"
            android:text="@string/type" />

        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="@string/note" />

        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            android:text="@string/time" />
<!--        36-->

    </LinearLayout>

    <View
        android:background="@color/divider_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        />


    <ListView
        android:id="@+id/lv_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>


</LinearLayout>